data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1278.wast
;; 9. **Test Description:**    Construct a function containing nested `if` conditions and loops, placing `unreachable` within the most deeply nested condition and verify loop continuation using `br`.    *Constraint Checked:* Verification of immediate trap when `unreachable` is reached inside deeply nested conditions.    *Mismanagement Focus:* Incorrect continuation or exit of loops and blocks upon `unreachable` execution.

(assert_invalid
  (module
    (func $loop_if_unreachable
      (loop (result i32)
        (if (i32.const 1)
          (then (if (i32.const 1) (then (unreachable))))
          (else (br 1))
        )
      )
    )
  )
  "type mismatch"
)